removed all the "bolds"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1> GIWA FORTUNE WALE</h1>
         <h3>
-            <B>Junior Frontend Developer<B>
+            Junior Frontend Developer
         </h3>
         <ul>
             <li>Lagos State, Nigeria.</li>
@@ -22,16 +22,16 @@
 
     <main>
         <h3>
-            <B>Skills<B>
+            Skills
         </h3>
         <p>HTML, CSS, JavaScript, Accessibility, Figma to Design, Responsive Web Design, Technical Writing, Presentation
         </p> <br>
         <h3>
-            <B>Education<B>
+            Education
         </h3>
         <p>University of Lagos, Nigeria. <br>TsAcademy.</p> <br>
         <h3>
-            <B>Experience<B>
+            Experience
         </h3>
         <p>TsAcademy - Student Frontend Developer</p>
         <ul>
@@ -40,11 +40,11 @@
             <li>Good Use of Github</li>
         </ul> <br>
         <h3>
-            <B>Across The Internet<B>
+            Across The Internet
         </h3>
     </main>
     <footer>
-        <a href="https://github.com/Bobbysyb">Github</a>
+        <b><a href="https://github.com/Bobbysyb">Github</a></b>
     </footer>
 
 
